Deployments/Ingress/dev.api.mentor.gg/dev-api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "dev-api-letsencrypt-issuer"

    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/cors-allow-headers: "impersonate-applicationuserid, authorization"

spec:
  tls:
  - hosts:
    - dev.api.mentor.gg
    secretName: dev-api-letsencrypt-key
  rules:
  - host: dev.api.mentor.gg
    http:
      paths:
      - path: /
        backend:
          serviceName: mentor-interface
          servicePort: 80
